CLAP this CLAP is CLAP a CLAP dumb CLAP idea

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,30 @@
 S3method("[",fseq)
 S3method("[[",fseq)
 S3method(print,fseq)
-export("%$%")
-export("%<>%")
-export("%>%")
-export("%T>%")
+export("%👌%")
+export("%👌🏻%")
+export("%👌🏼%")
+export("%👌🏽%")
+export("%👌🏾%")
+export("%👌🏿%")
+export("%👏%")
+export("%👏🏻%")
+export("%👏🏼%")
+export("%👏🏽%")
+export("%👏🏾%")
+export("%👏🏿%")
+export("%🙌%")
+export("%🙌🏻%")
+export("%🙌🏼%")
+export("%🙌🏽%")
+export("%🙌🏾%")
+export("%🙌🏿%")
+export("%🤞%")
+export("%🤞🏻%")
+export("%🤞🏼%")
+export("%🤞🏽%")
+export("%🤞🏾%")
+export("%🤞🏿%")
 export("n'est pas")
 export(add)
 export(and)
