--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Type: Package
-Package: magrittr
+Package: CLAPmagrittrCLAP
 Title: A Forward-Pipe Operator for R
 Version: 1.5.0
 Authors@R: c(
@@ -8,20 +8,20 @@ Authors@R: c(
     person("RStudio", role = c("cph", "fnd"))
     )
 Description: Provides a mechanism for chaining commands with a
-    new forward-pipe operator, %>%. This operator will forward a
+    new forward-pipe operator, %👏%. This operator will forward a
     value, or the result of an expression, into the next function
     call/expression. There is flexible support for the type
     of right-hand side expressions. For more information, see
     package vignette.
-    To quote Rene Magritte, "Ceci n'est pas un pipe."
+    To quote Rene Magritte, "Ceci n'est pas un 👏."
 Suggests:
     testthat,
     knitr,
     covr
 VignetteBuilder: knitr
 License: MIT + file LICENSE
-URL: http://magrittr.tidyverse.org, https://github.com/tidyverse/magrittr
-BugReports: https://github.com/tidyverse/magrittr/issues
+URL: http://magrittr.tidyverse.org, https://github.com/quattro/CLAPmagrittrCLAP
+BugReports: https://github.com/quattro/CLAPmagrittrCLAP/issues
 ByteCompile: Yes
 RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE)
