--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,12 @@ Authors@R: c(
     person("RStudio", role = c("cph", "fnd"))
     )
 Description: Provides a mechanism for chaining commands with a
-    new forward-pipe operator, %👏%. This operator will forward a
+    new forward-pipe operator, CLAP. This operator will forward a
     value, or the result of an expression, into the next function
     call/expression. There is flexible support for the type
     of right-hand side expressions. For more information, see
     package vignette.
-    To quote Rene Magritte, "Ceci n'est pas un 👏."
+    To quote Rene Magritte, "Ceci n'est pas un CLAP."
 Suggests:
     testthat,
     knitr,
